--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "express": "^5.0.0-beta.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "zod": "^3.22.4"
   }
 }
